--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -35,7 +35,7 @@ body {
 }
 
 .text-small {
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .text-normal {
@@ -112,7 +112,7 @@ header {
 
 #top-nav-title {
     font-style: normal;
-    font-weight: bold;
+    font-weight: 600;
     font-size: 20px;
 }
 
@@ -144,13 +144,12 @@ header {
     color: rgb(110, 110, 110);
     list-style-type: none;
     background-color: var(--nav);
-
 }
 
 #side-nav>ul {
+    margin-top: 64px;
     display: none;
     list-style-type: none;
-    margin: 40px 10px 20px 0px;
     white-space: nowrap;
 }
 
@@ -162,6 +161,13 @@ header {
 
 #side-nav img {
     margin-right: 10px;
+}
+
+.text-sidebar {
+    color: var(--score-default);
+    font-size: 20px;
+    font-weight: 500;
+
 }
 
 #content {
@@ -188,7 +194,7 @@ header {
 }
 
 .text-login-page-2 {
-    font-weight: bold;
+    font-weight: 600;
     font-size: 60px;
 }
 
@@ -218,6 +224,7 @@ header {
     max-width: 95px;
 }
 
+.aa,
 .card-activity-active,
 .card-packing-active {
     background-color: var(--button-secondary);
