--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -27,8 +27,7 @@
 
         <a class="navbar-brand position-absolute translate-middle-x start-50" href="/" id="top-nav-title">Pack'd</a>
         {% if user.is_authenticated %}
-        {% comment %} <text class="navbar-brand position-absolute translate-middle-x start-50" id="top-nav-title">{{
-          title }}</text> {% endcomment %}
+        {% comment %} <text class="navbar-brand position-absolute translate-middle-x start-50" id="top-nav-title">{{ title }}</text> {% endcomment %}
         <ul class="nav d-flex" id="top-nav-right">
           <li class="d-flex align-items-center">
             <a href="{% url 'logout' %}" class="nav-link px-2 my-0">Log Out</a>
@@ -50,37 +49,54 @@
 
   <div id="side-nav-container">
     <nav class="navbar-dark" id="side-nav">
-      <ul class="navbar-nav">
-        <li>
-          <a href="{% url 'home' %}" class="nav-link py-1 px-3 my-0">Home</a>
-        </li>
-        <li>
-          <a href="{% url 'findcity' %}" class="nav-link py-1 px-3 my-0">Search</a>
-        </li>
-        {% if user.is_authenticated %}
-        <li>
-          <a href="{% url 'upcoming_trips' %}" class="nav-link py-1 px-3 my-0">Upcoming Trips</a>
-        </li>
-        <li>
-          <a href="{% url 'past_trips' %}" class="nav-link py-1 px-3 my-0">Past Trips</a>
-        </li>
-        <li>
-          <a href="{% url 'profile' user.id %}" class="nav-link py-1 px-3 my-0">Profile</a>
-        </li>
-        <li>
-          <a href="{% url 'logout' %}" class="nav-link py-1 px-3 my-0">Log Out</a>
-        </li>
-        {% else %}
-        <li>
-          <a href="{% url 'signup' %}" class="nav-link py-1 px-3 my-0">Sign In</a>
-        </li>
-        <li>
-          <a href="{% url 'login' %}" class="nav-link py-1 px-3 my-0">Log In</a>
-        </li>
-        {% endif %}
-      </ul>
+        <ul class="navbar-nav" id="side-nav-list">
+          <li class="ms-2">
+            <a href="{% url 'home' %}" class="nav-link py-1 px-3 my-0">
+              <text class="text-sidebar">Home</text>
+            </a>
+          </li>
+          <li class="ms-2">
+            <a href="{% url 'findcity' %}" class="nav-link py-1 px-3 my-0">
+              <text class="text-sidebar">Search</text>
+            </a>
+          </li>
+          {% if user.is_authenticated %}
+          <li class="ms-2">
+            <a href="{% url 'upcoming_trips' %}" class="nav-link py-1 px-3 my-0">
+              <text class="text-sidebar">Upcoming Trips</text>
+            </a>
+          </li>
+          <li class="ms-2">
+            <a href="{% url 'past_trips' %}" class="nav-link py-1 px-3 my-0">
+              <text class="text-sidebar">Past Trips</text>
+            </a>
+          </li>
+          <li class="ms-2">
+            <a href="{% url 'profile' user.id %}" class="nav-link py-1 px-3 my-0">
+              <text class="text-sidebar">Profile</text>
+            </a>
+          </li>
+          <li class="ms-2">
+            <a href="{% url 'logout' %}" class="nav-link py-1 px-3 my-0">
+              <text class="text-sidebar">Log Out</text>
+            </a>
+          </li>
+          {% else %}
+          <li class="ms-2">
+            <a href="{% url 'login' %}" class="nav-link py-1 px-3 my-0">
+              <text class="text-sidebar">Login</text>
+            </a>
+          </li>
+          <li class="ms-2">
+            <a href="{% url 'signup' %}" class="nav-link py-1 px-3 my-0">
+              <text class="text-sidebar">Sign Up</text>
+            </a>
+          </li>
+          {% endif %}
+        </ul>
     </nav>
   </div>
+
   <main>
     <div id="content">
       {% if previous_url %}
@@ -100,7 +116,5 @@
   <script defer type="text/javascript" src="/static/javascript/base.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-
 </body>
-
 </html>
