--- a/main_app/templates/trips/upcoming_trips.html
+++ b/main_app/templates/trips/upcoming_trips.html
@@ -26,7 +26,7 @@
                   <div class="row">
                     <div class="col-7">
                       {% if user.first_name %} 
-                        <text class="text-small ms-2">{{ user.first_name|title }} {{ user.last_name}|title }}</text>
+                        <text class="text-small ms-2">{{ user.first_name|title }} {{ user.last_name|title }}</text>
                       {% else %}
                         <text class="text-small ms-2">{{ user.username }}</text>
                       {% endif %}
