--- a/main_app/templates/trips/trip.html
+++ b/main_app/templates/trips/trip.html
@@ -35,7 +35,7 @@
       </div>
       <!-- Button trigger modal -->
        <p type="button"  data-bs-toggle="modal" data-bs-target="#staticBackdrop" style="width:fit-content;" >
-          ...more
+          ...forecast
         </p>
       
       
