--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -3,42 +3,42 @@
 
 <div class="container px-4 mt-3" id="mobile-container">
   <div class="d-grid text-center">
-    <div class="mt-3">
+    <div class="">
       <text class="text-login-page">Sign Up</text><br>
     </div>
   </div>
-  <hr class="my-3"/>
-  <form method="POST" class="mt-2" action="{% url 'signup' %}">
+  <hr class="my-4"/>
+  <form method="POST" action="{% url 'signup' %}">
     {% csrf_token %}
     <div class="row">
       <div class="col-6">
-        <div class="mb-2">
-          <label for="login-firstname" class="form-label mb-1">First Name</label>
+        <div class="mb-4">
+          <label for="login-firstname" class="form-label mb-2">First Name</label>
           <input type="text" class="form-control" id="login-firstname" aria-describedby="firstname" name="first_name" required>
         </div>
       </div>
       <div class="col-6">
-        <div class="mb-2">
-          <label for="login-lastname" class="form-label mb-1">Last Name</label>
+        <div class="mb-4">
+          <label for="login-lastname" class="form-label mb-2">Last Name</label>
           <input type="text" class="form-control" id="login-lastname" aria-describedby="lastname" name="last_name" required>
         </div>
       </div>
       <div class="col-12">
-        <div class="mb-3">
-          <label for="login-username" class="form-label mb-1">Username</label>
+        <div class="mb-4">
+          <label for="login-username" class="form-label mb-2">Username</label>
           <input type="text" class="form-control" id="login-username" aria-describedby="username" name="username" required>
           <small id="username-help" class="form-text text-muted">Letters, digits and @/./+/-/_ only.</small>
         </div>
       </div>
       <div class="col-12">
-        <div class="mb-3">
-          <label for="login-password" class="form-label mb-1">Password</label>
+        <div class="mb-4">
+          <label for="login-password" class="form-label mb-2">Password</label>
           <input type="password" class="form-control" id="login-password" name="password1" autocomplete="new-password" required>
         </div>
       </div>
       <div class="col-12">
-        <div class="mb-3">
-          <label for="login-password" class="form-label mb-1">Confirm Password</label>
+        <div class="mb-4">
+          <label for="login-password" class="form-label mb-2">Confirm Password</label>
           <input type="password" class="form-control" id="login-password" name="password2" autocomplete="new-password" required>
           <small id="username-help" class="form-text text-muted">Enter the same password as before.</small>
         </div>
