--- a/main_app/templates/trips/trip.html
+++ b/main_app/templates/trips/trip.html
@@ -34,7 +34,7 @@
         <p class="text-muted"> H: {{today_temp_high}} &nbsp;&nbsp; L: {{today_temp_low}} </p>
       </div>
       <!-- Button trigger modal -->
-       <p type="button"  data-bs-toggle="modal" data-bs-target="#staticBackdrop" style="text-align: -webkit-right;" >
+       <p type="button"  data-bs-toggle="modal" data-bs-target="#staticBackdrop" style="text-align: -webkit-right; font-style: italic;" >
           ...forecast
         </p>
       <!-- Modal -->
