--- a/main_app/templates/trips/trip.html
+++ b/main_app/templates/trips/trip.html
@@ -77,8 +77,8 @@
                             {% if el.icon == 'partly-cloudy-day' %}
                               <img src="../../static/images/partly-cloudy.png" alt="..." style="max-width: 80px;">
                             {% endif %}
-                            {% if el.icon == 'clear-day' %}
-                              <img src="../../static/images/clear-day.png" alt="..." style="max-width: 80px;">
+                            {% if el.icon == 'wind' %}
+                              <img src="../../static/images/wind.png" alt="..." style="max-width: 80px;">
                             {% endif %}
                             
                             <div>
