new master with settings

--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -34,6 +34,7 @@
         <div class="mb-4">
           <label for="login-password" class="form-label mb-2">Password</label>
           <input type="password" class="form-control" id="login-password" name="password1" autocomplete="new-password" required>
+          <small id="password1-help" class="form-text text-muted">Your password must contain at least 8 characters and numbers as well.</small>
         </div>
       </div>
       <div class="col-12">
