--- a/main_app/templates/trips/trip.html
+++ b/main_app/templates/trips/trip.html
@@ -57,13 +57,6 @@
                   {{el.datetime}}
                 </button>
               </h2>
-              <div id="flush-collapseOne{{el.datetime}}" class="accordion-collapse collapse" aria-labelledby="flush-headingOne{{el.datetime}}" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">
-                  <div class="card">
-                    <div class="card-header">
-                      {{el.datetime}}
-                    </div>
-                  </div>
                   <div id="flush-collapseOne{{el.datetime}}" class="accordion-collapse collapse" aria-labelledby="flush-headingOne{{el.datetime}}" data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body">
                       <div class="card">
@@ -71,62 +64,46 @@
                           {{el.datetime}}
                         </div>
                         <div class="card-body">
-                          <div class="d-flex justify-content-between align-items-start">
-                            {% if el.icon == 'rain' %}
-                              <img src="../../static/images/rain.png" alt="..." style="max-width: 80px;">
-                            {% endif %}
-                            {% if el.icon == 'cloudy' %}
-                              <img src="../../static/images/cloudy.png" alt="..." style="max-width: 80px;">
-                            {% endif %}
-                            {% if el.icon == 'snow' %}
-                              <img src="../../static/images/snow.png" alt="..." style="max-width: 80px;">
-                            {% endif %}
-                            {% if el.icon == 'clear-day' %}
-                              <img src="../../static/images/clear-day.png" alt="..." style="max-width: 80px;">
-                            {% endif %}
-                            {% if el.icon == 'partly-cloudy-day' %}
-                              <img src="../../static/images/partly-cloudy.png" alt="..." style="max-width: 80px;">
-                            {% endif %}
-                            {% if el.icon == 'wind' %}
-                              <img src="../../static/images/wind.png" alt="..." style="max-width: 80px;">
-                            {% endif %}
-                            <div>
-                              <h3>{{el.tempmax}}&#x2103;</h3>
-                            </div>
-                          </div>
-                          <div class="d-flex justify-content-between align-items-start">
-                            <p class="text-muted"> {{el.conditions}} </p>
-                            <p class="text-muted"> H: {{el.tempmax}}&#x2103; &nbsp;&nbsp; L: {{el.tempmax}}&#x2103; </p>
-                          </div>
-                          <div class="d-flex justify-content-between align-items-start">
-                            <p class="text-muted"> Sunrise : {{el.sunrise}} </p>
-                            <p class="text-muted"> Sunset : {{el.sunset}} </p>
-                          </div>
-                          <div class="d-flex justify-content-between align-items-start">
-                            <p class="text-muted"> Wind : {{el.windspeed}}mph </p>
-                            <p class="text-muted"> Feels Like : {{el.feelslike}}&#x2103; </p>
-                          </div>
-                          <div class="d-flex justify-content-between align-items-start">
-                            <p class="text-muted"> Chance of Rain: {{el.precipprob}}%</p>
-                            <p class="text-muted"> Humidity: {{el.humidity}}% </p>
+                        <div class="d-flex justify-content-between align-items-start">
+                          {% if el.icon == 'rain' %}
+                            <img src="../../static/images/rain.png" alt="..." style="max-width: 80px;">
+                          {% endif %}
+                          {% if el.icon == 'cloudy' %}
+                            <img src="../../static/images/cloudy.png" alt="..." style="max-width: 80px;">
+                          {% endif %}
+                          {% if el.icon == 'snow' %}
+                            <img src="../../static/images/snow.png" alt="..." style="max-width: 80px;">
+                          {% endif %}
+                          {% if el.icon == 'clear-day' %}
+                            <img src="../../static/images/clear-day.png" alt="..." style="max-width: 80px;">
+                          {% endif %}
+                          {% if el.icon == 'partly-cloudy-day' %}
+                            <img src="../../static/images/partly-cloudy.png" alt="..." style="max-width: 80px;">
+                          {% endif %}
+                          {% if el.icon == 'wind' %}
+                            <img src="../../static/images/wind.png" alt="..." style="max-width: 80px;">
+                          {% endif %}
+                          <div>
+                            <h3>{{el.tempmax}}&#x2103;</h3>
                           </div>
                         </div>
-                      </div>
-                      <div class="d-flex justify-content-between align-items-start">
-                        <p class="text-muted"> {{el.conditions}} </p>
-                        <p class="text-muted"> H: {{el.tempmax}}&#x2103; &nbsp;&nbsp; L: {{el.tempmax}}&#x2103; </p>
-                      </div>
-                      <div class="d-flex justify-content-between align-items-start">
-                        <p class="text-muted"> Sunrise : {{el.sunrise}} </p>
-                        <p class="text-muted"> Sunset : {{el.sunset}} </p>
-                      </div>
-                      <div class="d-flex justify-content-between align-items-start">
-                        <p class="text-muted"> Wind : {{el.windspeed}}mph </p>
-                        <p class="text-muted"> Feels Like : {{el.feelslike}}&#x2103; </p>
-                      </div>
-                      <div class="d-flex justify-content-between align-items-start">
-                        <p class="text-muted"> Chance of Rain: {{el.precipprob}}%</p>
-                        <p class="text-muted"> Humidity: {{el.humidity}}% </p>
+                        <div class="d-flex justify-content-between align-items-start">
+                          <p class="text-muted"> {{el.conditions}} </p>
+                          <p class="text-muted"> H: {{el.tempmax}}&#x2103; &nbsp;&nbsp; L: {{el.tempmax}}&#x2103; </p>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-start">
+                          <p class="text-muted"> Sunrise : {{el.sunrise}} </p>
+                          <p class="text-muted"> Sunset : {{el.sunset}} </p>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-start">
+                          <p class="text-muted"> Wind : {{el.windspeed}}mph </p>
+                          <p class="text-muted"> Feels Like : {{el.feelslike}}&#x2103; </p>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-start">
+                          <p class="text-muted"> Chance of Rain: {{el.precipprob}}%</p>
+                          <p class="text-muted"> Humidity: {{el.humidity}}% </p>
+                        </div>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -136,8 +113,7 @@
             {% endfor %}
           </div>
         </div>
-        <div class="modal-footer">
-        </div>
+        <div class="modal-footer"></div>
       </div>
     </div>
   </div>
