--- a/main_app/templates/trips/trip.html
+++ b/main_app/templates/trips/trip.html
@@ -115,6 +115,7 @@
           </div>
         </div>
       </div>
+      <!-- end of model -->
     </div>
     <!-- end of weather forecast -->
   </div>
