--- a/main_app/templates/trips/trip.html
+++ b/main_app/templates/trips/trip.html
@@ -4,26 +4,23 @@
 <div class="container px-4 multi-collapse show" id="mobile-container" aria-expanded="true">
   <div class="card card-shadow border-0 mt-4 weather-card" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
     <div class="card-body text-center">
-      <text class="text-header">{{address}}</text>
+      <text class="text-header">{{ trip.city}}, {{ trip.country}}</text>
       <div class="row d-flex">
         <div class="col-6 align-self-center">
           {% if weather_icon == 'rain' %}
-            <img src="../../static/images/rain.png" alt="..." class="weather-icon">
+            <img src="../../static/images/rain.png" alt="..." class="weather-icon p-2">
           {% endif %}
           {% if weather_icon == 'cloudy' %}
-            <img src="../../static/images/cloudy.png" alt="..." class="weather-icon">
+            <img src="../../static/images/cloudy.png" alt="..." class="weather-icon p-2">
           {% endif %}
           {% if weather_icon == 'snow' %}
-            <img src="../../static/images/snow.png" alt="..." class="weather-icon">
+            <img src="../../static/images/snow.png" alt="..." class="weather-icon p-2">
           {% endif %}
           {% if weather_icon == 'clear-day' %}
-            <img src="../../static/images/clear-day.png" alt="..." class="weather-icon">
+            <img src="../../static/images/clear-day.png" alt="..." class="weather-icon p-2">
           {% endif %}
           {% if weather_icon == 'partly-cloudy-day' %}
-            <img src="../../static/images/partly-cloudy.png" alt="..." class="weather-icon">
-          {% endif %}
-          {% if weather_icon == 'clear-day' %}
-            <img src="../../static/images/clear-day.png" alt="..." class="weather-icon">
+            <img src="../../static/images/partly-cloudy.png" alt="..." class="weather-icon p-2">
           {% endif %}
         </div>
         <div class="col-6 align-self-center">
@@ -45,7 +42,7 @@
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="staticBackdropLabel">{{address}} <span class="text-muted" style="font-size: 12px;font-style: italic;"> ....15 days weather forecast</span></h5>
+          <h5 class="modal-title" id="staticBackdropLabel">{{trip.city}}, {{trip.country}} <span class="text-muted" style="font-size: 12px;font-style: italic;"> ....15 days weather forecast</span></h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -119,8 +116,13 @@
   <!-- end of weather forecast -->
   <div class="card card-shadow border-0 mt-4 ">
     <div class="card-body">
-      <div class="card-title">
-        <text class="text-header">Packing List</text>
+      <div class="card-title d-flex">
+        <div class="me-auto">
+          <text class="text-header me-auto">Packing List</text>
+        </div>
+        <div class="ms-auto">
+          <a class="text-header" href="{% url 'edit_trip' trip.id %}">Edit</a>
+        </div>
       </div>
       {% for category, items in categorized_items.items %}
       {% if items|length > 0 %}
